add nutrient endpoint
